# bazel_go_starter

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bazel-go-gin-starter  bazel-bin  bazel-out  bazel-testlogs  env.example.json  go.mod  main.go  reflex_run.sh  start_refresh.sh
database/: BUILD.bazel  database.go
env/: env.go
routes/: BUILD.bazel  routes.go
