load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "main",
    srcs = ["main.go"],  # Asegúrate de que main.go esté en el mismo directorio que este BUILD.bazel
    importpath = "example/bazel-go-gin-starter",
    visibility = ["//visibility:public"],
    deps = [
        "//database:database_lib",  # Dependencia al paquete database
        "//routes:routes_lib",      # Dependencia al paquete routes
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_gin_gonic_gin//:go_default_library",
    ],
)




